help page update

--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -45,14 +45,14 @@
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
                         <li>Select the 'Create a new case for this product' option <br class="opss-br-desktop">on the product record page</li>
-                        <li>If a suitable product record does not already exist, then <br class="opss-br-desktop">create one</li>
+                        <li>If a suitable product record does not already exist, you can <br class="opss-br-desktop">create one</li>
                     </ul>
 
                 </li>
                 <li><span class="govuk-!-font-weight-bold">Continue to add any other information, such as businesses or test results, to your case at any time</span></li>
             </ol>
 
-            <p class="govuk-body-s">The case you have created will automatically include the product you have created the case for.</p>
+            <p class="govuk-body-s">The case you have created will automatically include the product.</p>
 
         </div>
 
@@ -69,7 +69,7 @@
         </h3>
 
         <p class="govuk-body">
-            A product record only records information about a product. For example, its name, its barcode number and photographs of the product. It does not include information about safety concerns or incidents relating to the product because that is case specific information.
+            A product record only records and includes information about a product. For example, its name, its barcode number and photographs of the product. It does not include information about safety concerns or incidents relating to the product because that is case specific information.
         </p>
 
         <p class="govuk-body">
@@ -112,16 +112,17 @@
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">        
         
         <h3 class="govuk-heading-s govuk-!-margin-top-6 govuk-!-margin-bottom-4">
-            We have made the cases and products pages more useful and easier to use
+            Product details and case information have been seperated to <br class="opss-br-desktop">create several benefits
         </h3>
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+            <li>With new cases and product records, you can now see which teams are also using the same product record in their investigations and if they are investigating the same product</li>
             <li>There is no longer a need to input data about a product if a product record for the product already exists</li>
             <li>The product records will have improved information and detail</li>
-            <li>You can now see if other teams are using the same product record in their investigations (and if they are investigating the same product)</li>
             <li>You can contact other teams you now know to have investigated, or are investigating, the same product. (Teams can add other teams to a case)</li>
             <li>By using the same product records across different teams and cases nationally, there is greater transparency, and you are able to share information or even avoid duplicating work</li>
-            <li>There will be fewer duplications of product entries in the database and searching for products will be more decisive.</li>
+            <li>There will be fewer duplications of product entries in the database and searching for products will be more decisive</li>
+            <li>This will allow us to add more powerful features in the future.</li>
         </ul>      
 
     </div>                
