--- a/app/views/psd-products-area/all-products.html
+++ b/app/views/psd-products-area/all-products.html
@@ -263,7 +263,7 @@
                             Product
                         </th>
                         <th id="item-2" colspan="4" scope="colgroup" class="govuk-table__header">
-                            <a href="#" class="govuk-link govuk-link--no-visited-state">Nevica skis</a> <span class="govuk-!-font-size-14 govuk-!-font-weight-regular">(Retired product record)</span>
+                            <a href="#" class="govuk-link govuk-link--no-visited-state">Nevica skis</a> <span class="govuk-!-font-size-14 govuk-!-font-weight-regular opss-no-wrap">(Retired product record)</span>
                         </th>
                     </tr>
                     <tr class="govuk-table__row">
@@ -291,7 +291,7 @@
                           Product
                       </th>
                       <th id="item-3" colspan="4" scope="colgroup" class="govuk-table__header">
-                          <a href="#" class="govuk-link govuk-link--no-visited-state">Llaboriosam Nostrum Minus 3000kw</a> <span class="govuk-!-font-size-14 govuk-!-font-weight-regular">(Retired product record)</span>
+                          <a href="#" class="govuk-link govuk-link--no-visited-state">Llaboriosam Nostrum Minus 3000kw</a> <span class="govuk-!-font-size-14 govuk-!-font-weight-regular opss-no-wrap">(Retired product record)</span>
                       </th>
                   </tr>
                   <tr class="govuk-table__row">
