--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -85,7 +85,7 @@
         </p>
         
         <p class="govuk-body">
-            You can create a new product record if one doesn't already exist for your product or an existing one doesn't fit your needs.
+            You can create a new product record if one doesn't already exist for your product or if an existing one doesn't fit your needs.
         </p>
 
     </div>                
@@ -116,10 +116,10 @@
         </h3>
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-            <li>With new cases and product records, you can now see which teams are also using the same product record in their investigations and if they are investigating the same product</li>
+            <li>With new cases and product records, you can now see which teams are also using the same product record in their <abbr>PSD</abbr> cases and if they are investigating the same product</li>
+            <li>With new cases and product records, you will now be able to see all investigations for a product and how they may have been resolved</li>
             <li>There is no longer a need to input data about a product if a product record for the product already exists</li>
             <li>The product records will have improved information and detail</li>
-            <li>You can contact other teams you now know to have investigated, or are investigating, the same product. (Teams can add other teams to a case)</li>
             <li>By using the same product records across different teams and cases nationally, there is greater transparency, and you are able to share information or even avoid duplicating work</li>
             <li>There will be fewer duplications of product entries in the database and searching for products will be more decisive</li>
             <li>This will allow us to add more powerful features in the future.</li>
