--- a/app/views/create-cases-add-products/products-page-new.html
+++ b/app/views/create-cases-add-products/products-page-new.html
@@ -67,7 +67,7 @@
 
                 <div class="govuk-input__wrapper opss-search__wrapper">
                     <input class="govuk-input govuk-!-width-one-half" type="search" id="products-search" name="products-search" aria-describedby="search-hint">
-                    <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
+                    <button class="govuk-button govuk-!-margin-bottom-0">
                         <span class="govuk-visually-hidden">Search</span>
                     </button>
                 </div>
