--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -352,6 +352,12 @@ samp {
     .opss-desktop-min-height--s {
         min-height: 180px; 
     }
+    .opss-desktop-min-height--s2 {
+        min-height: 230px; 
+    } 
+    .opss-desktop-min-height--s3 {
+        min-height: 275px; 
+    }         
     .opss-desktop-min-height--m {
         min-height: 300px; 
     }    
