--- a/app/views/cosmetics-search-designs/search-page-01b-advanced-search.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-advanced-search.html
@@ -18,44 +18,60 @@
     <section class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
-            <div class="govuk-form-group">
+            <div class="govuk-form-group opss-desktop-min-height--s3">
+                
                 <h1 class="govuk-label-wrapper">
                     <label class="govuk-label govuk-label--l" for="products-search">
                         Search cosmetic products
                     </label>
                 </h1>
+
                 <div id="search-hint" class="govuk-hint">
                     Use one or more keywords to search for product notifications.
                 </div>
 
                 <div class="govuk-input__wrapper opss-search__wrapper">
                     <input class="govuk-input govuk-!-width-one-half" type="search" id="products-search" name="products-search" aria-describedby="search-hint">
-                    <button class="govuk-button" data-module="govuk-button">
+                    <button class="govuk-button govuk-!-margin-bottom-2">
                         <span class="govuk-visually-hidden">Search</span>
                     </button>
                 </div>
 
-            </div>
+                <fieldset class="govuk-fieldset">
+                    <legend class="govuk-visually-hidden">
+                        Advanced search options
+                    </legend>
+                    <div class="govuk-radios govuk-radios--inline govuk-radios--small">
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="name" name="searchtype" type="radio" value="name" checked="checked">
+                            <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="name">
+                                Notification name
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="rp" name="searchtype" type="radio" value="rp">
+                            <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="rp">
+                                Responsible Person name
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="both" name="searchtype" type="radio" value="both">
+                            <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="both">
+                                Both
+                            </label>
+                        </div>                        
+                    </div>
+                    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+                        <div class="govuk-checkboxes__item">
+                          <input class="govuk-checkboxes__input" id="similar" name="organisation" type="checkbox" value="similar">
+                          <label class="govuk-label govuk-checkboxes__label govuk-!-font-size-16" for="similar">
+                            Include similar words
+                          </label>
+                        </div>
+                    </div>
+                </fieldset> 
 
-            <fieldset class="govuk-fieldset">
-                <legend class="govuk-visually-hidden">
-                    Is your search using keywords or a barcode?
-                </legend>
-                <div class="govuk-radios govuk-radios--inline govuk-radios--small">
-                    <div class="govuk-radios__item">
-                        <input class="govuk-radios__input" id="keywords" name="searchtype" type="radio" value="keywords" checked="checked">
-                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="keywords">
-                            Using keywords
-                        </label>
-                    </div>
-                    <div class="govuk-radios__item">
-                        <input class="govuk-radios__input" id="barcode" name="searchtype" type="radio" value="barcode">
-                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="barcode">
-                            Using a barcode
-                        </label>
-                    </div>
-                </div>
-            </fieldset>            
+            </div>
         </form>
 
     </section>
