--- a/app/views/psd-products-area/all-products.html
+++ b/app/views/psd-products-area/all-products.html
@@ -29,7 +29,7 @@
                   <span id="search-hint">You can search for one or more products by using the keywords that describe them or use a single <abbr>PSD</abbr> reference number to find a specific product record.</span> You can also sort the ordering of the search results.
               </p>
               <p class="govuk-body-s govuk-!-margin-bottom-1">
-                  You can filter the results by hazard type.
+                  You can filter the results by hazard type. As an <abbr>OPSS</abbr> user you can also include 'retired' product records in your search. (These are records which are no longer active and are now considered less relevant).
               </p>
               <p class="govuk-body-s govuk-visually-hidden">
                 Search results appear within the following <code>form</code> and within the <code>role = region</code>.
