--- a/app/views/cosmetics-search-designs/search-page-01b-advanced-search-hints.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-advanced-search-hints.html
@@ -47,7 +47,7 @@
                             </legend>
                             <div class="govuk-radios govuk-radios--inline govuk-radios--small">
                                 <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="name" name="searchtype" type="radio" value="name" checked="checked">
+                                    <input class="govuk-radios__input" id="name" name="searchtype" type="radio" value="name">
                                     <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="name">
                                         Notification name
                                     </label>
@@ -59,7 +59,7 @@
                                     </label>
                                 </div>
                                 <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="both" name="searchtype" type="radio" value="both">
+                                    <input class="govuk-radios__input" id="both" name="searchtype" type="radio" value="both" checked="checked">
                                     <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="both">
                                         Both
                                     </label>
