new ingredient warning text

--- a/app/views/cosmetics-search-designs/search-page-01b-advanced-search-hints.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-advanced-search-hints.html
@@ -35,7 +35,7 @@
 
                     <section class="govuk-form-group">
                         <div class="govuk-input__wrapper opss-search__wrapper">
-                            <input class="govuk-input govuk-!-width-one-half" type="search" id="products-search" name="products-search" aria-describedby="search-hint">
+                            <input class="govuk-input govuk-!-width-three-quarters" type="search" id="products-search" name="products-search" aria-describedby="search-hint">
                             <button class="govuk-button govuk-!-margin-bottom-2">
                                 <span class="govuk-visually-hidden">Search</span>
                             </button>
