--- a/app/views/cosmetics-general/ingredients-ingredients-search.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search.html
@@ -8,15 +8,15 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full opss-desktop-min-height--s"> 
+    <div class="govuk-grid-column-full opss-desktop-min-height--s2"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Ingredients search
         </h1>
 
-        <p class="govuk-body opss-secondary-text">
-            Search cosmetic product notifications for notifications which include a specific ingredient. 
-            <!--br><span class="govuk-!-font-size-16">(Currently, only notifications made after [dd month year] are searchable).</span--> 
+        <p class="govuk-body">
+            <span class="opss-secondary-text">Search cosmetic product notifications for notifications which include a specific ingredient.</span> <br class="opss-br-desktop">
+            <span class="govuk-!-font-weight-bold">Only products notified after 2 October 2022 are searchable for ingredients</span>.
         </p>
 
         <details class="govuk-details govuk-!-width-two-thirds opss-details--sm" data-module="govuk-details">
@@ -31,9 +31,9 @@
                     <span id="search-hint">For best results, search for an individual ingredient using its name (or the keywords of its name).</span> This will search cosmetic product notifications for cosmetic products which use it. 
                 </p-->
                 
-                <p class="govuk-body-s govuk-!-margin-bottom-4">
-                    <span class="govuk-!-font-weight-bold">Currently, only products notified after [dd month year] are searchable for ingredients.</span>
-                </p>                
+                <!--p class="govuk-body-s govuk-!-margin-bottom-4">
+                    <span class="govuk-!-font-weight-bold">Currently, only products notified after 2 October 2022 are searchable for ingredients.</span>
+                </p-->                
 
                 <p class="govuk-body-s govuk-!-margin-bottom-4">
                     <span id="search-hint">For best results, search for an individual ingredient.</span> This will search cosmetic product notifications for products which use it. 
