--- a/app/views/cosmetics-general/ingredients-ingredients-search.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search.html
@@ -14,9 +14,9 @@
             Ingredients search
         </h1>
 
-        <p class="govuk-body">
-            <span class="opss-secondary-text">Search cosmetic product notifications for notifications which include a specific ingredient.</span> <br class="opss-br-desktop">
-            <span class="govuk-!-font-weight-bold">Only products notified after 2 October 2022 are searchable for ingredients</span>.
+        <p class="govuk-body opss-secondary-text">
+            Search cosmetic product notifications for notifications which include a specific ingredient. <br class="opss-br-desktop">
+            <span class="govuk-!-font-weight-bold opss-primary-text">Only products notified after 2 October 2022 are searchable for ingredients.
         </p>
 
         <details class="govuk-details govuk-!-width-two-thirds opss-details--sm" data-module="govuk-details">
@@ -342,18 +342,10 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                    <p class="govuk-body-s">
-                        19 notifications with ingredients matching the search 
-                        <samp>
-                            <span class="govuk-!-font-weight-bold">Consectetur Lorem Etilee</span>,
-                        </samp>
-                        <span class="opss-filter-txt"> 
-                            using the current filters,
-                        </span> 
-                        were found.
-                    </p>
+                <p class="govuk-body-s">
+                    19 notifications with ingredients matching the search <span class="govuk-!-font-weight-bold">Consectetur Lorem Etilee</span>, <span class="opss-filter-txt">using the current filters (notified after 2 October 2022)</span> were found.
+                </p>
             </div>
-
         </div>
 
         <div class="govuk-grid-row">
@@ -1130,5 +1122,6 @@
     </section>
 
 </div>
+
 
 {% endblock %}
