--- a/app/views/cosmetics-general/ingredients-list-01.html
+++ b/app/views/cosmetics-general/ingredients-list-01.html
@@ -16,14 +16,14 @@
 </div-->
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s"> 
+    <div class="govuk-grid-column-full opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Ingredients list
         </h1>
 
         <p class="govuk-body opss-secondary-text">
-            Ingredients listed in cosmetic product notifications (notified after 2 October 2022).
+            Ingredients listed in cosmetic product notifications (<span class="govuk-!-font-weight-bold opss-primary-text">submitted after 2 October 2022</span>)<a href="#october" class="govuk-link govuk-link--no-visited-state govuk-link--no-underline"><sup class="govuk-!-font-size-14">&ast;</sup></a>.
         </p>
 
     </div>
@@ -88,7 +88,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p class="govuk-body-s">
-                    There are currently 343 different searchable ingredients in cosmetic product notifications.
+                    There are currently 343 different ingredients listed in cosmetic product notifications <br class="opss-br-desktop">(submitted after 2 October 2022).
                 </p>                    
             </div>
         </div>
@@ -100,7 +100,7 @@
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-02.html">Aorem ipsum dolor</a>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-02.html">Aorem ipsum</a>
                         </li>
                         <li>
                             <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-02.html">Beritatis ipsum impedit</a>
@@ -726,6 +726,14 @@
         </div>
     </section>
 
+</div>
+
+<div class="govuk-grid-column-full">
+    <div class="govuk-grid-row">
+        <p id="october" class="govuk-body govuk-!-font-size-14 govuk-!-margin-top-9 govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
+            <sup>&ast;</sup>Notifications submitted before 3 October 2022 are not searchable for ingredients. <br class="opss-br-desktop">These ingredients may also feature in older notifications.
+        </p>
+    </div>
 </div>
 
 {% endblock %}
