--- a/app/views/cosmetics-general/ingredients-list-02.html
+++ b/app/views/cosmetics-general/ingredients-list-02.html
@@ -28,12 +28,12 @@
         </h1>
 
         <p class="govuk-body govuk-!-margin-bottom-1 opss-secondary-text">
-            Ingredient Aorem ipsum dolor is included in notifications (after 2 October 2022) by these Responsible Persons. <br class="opss-br-desktop">
+            Ingredient Aorem ipsum is included in notifications -&nbsp;<span class="govuk-!-font-weight-bold opss-primary-text">submitted after 2 October 2022</span><a href="#october" class="govuk-link govuk-link--no-visited-state govuk-link--no-underline"><sup class="govuk-!-font-size-14">&ast;</sup></a>&nbsp;- by these Responsible Persons. From here you can view the notifications for each Responsible Person.
         </p>
 
-        <p class="govuk-body-s opss-secondary-text">
-            From here you can view all the notifications by the Responsible Person which include this ingredient.
-        </p>
+        <!--p class="govuk-body-s opss-secondary-text">
+            From here you can view all the notifications by a Responsible Person which include this ingredient.
+        </p-->
 
     </div>
 </div>
@@ -107,7 +107,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p class="govuk-body-s">
-                    There are currently 137 Responsible Persons with active notifications (notified after 2 October 2022) which include the ingredient Aorem ipsum dolor.
+                    There are currently 137 Responsible Persons with active notifications (submitted after 2 October 2022) which include the ingredient Aorem ipsum.
                 </p>                    
             </div>
         </div>
@@ -729,14 +729,14 @@
                 <nav class="opss-pagination-link opss-pagination-link--no-top-border">
                     <ul>
                         <li class="opss-pagination-link__wrap opss-pagination-link--prev">
-                                <a href="" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Previous page</span><span class="govuk-visually-hidden">:</span> <span>Page 1 of 3</span>
-                                </a>
-                            </li>
-                            <li class="opss-pagination-link__wrap opss-pagination-link--next">
-                                <a href="" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Next page</span><span class="govuk-visually-hidden">:</span> <span>Page 3 of 3</span>
-                                </a>
+                            <a href="" class="govuk-link govuk-link--no-visited-state">
+                                <span>Previous page</span><span class="govuk-visually-hidden">:</span> <span>Page 1 of 3</span>
+                            </a>
+                        </li>
+                        <li class="opss-pagination-link__wrap opss-pagination-link--next">
+                            <a href="" class="govuk-link govuk-link--no-visited-state">
+                                <span>Next page</span><span class="govuk-visually-hidden">:</span> <span>Page 3 of 3</span>
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -745,6 +745,14 @@
         </div>
     </section>
 
+</div>
+
+<div class="govuk-grid-column-full">
+    <div class="govuk-grid-row">
+        <p id="october" class="govuk-body govuk-!-font-size-14 govuk-!-margin-top-9 govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
+            <sup>&ast;</sup>Notifications submitted before 3 October 2022 are not searchable for ingredients. <br class="opss-br-desktop">The ingredient may also feature in older notifications.
+        </p>
+    </div>
 </div>
 
 {% endblock %}
