--- a/app/views/cosmetics-general/ingredients-list-03.html
+++ b/app/views/cosmetics-general/ingredients-list-03.html
@@ -22,7 +22,7 @@
 </div-->
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s"> 
+    <div class="govuk-grid-column-full opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Ingredients list - <span class="govuk-!-font-weight-regular opss-font-size--reduced-s">Notifications</span>
@@ -30,7 +30,7 @@
 
 
         <p class="govuk-body opss-secondary-text">
-            These are all the notifications by Procter &amp; Gamble (notified after 2 October 2022) which include the ingredient Aorem ipsum dolor.
+            Notifications by Procter &amp; Gamble -&nbsp;<span class="govuk-!-font-weight-bold opss-primary-text">submitted after 2 October 2022</span><a href="#october" class="govuk-link govuk-link--no-visited-state govuk-link--no-underline"><sup class="govuk-!-font-size-14">&ast;</sup></a>&nbsp;- which include the ingredient Aorem ipsum.
         </p>
 
     </div>
@@ -174,7 +174,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p class="govuk-body-s">
-                    There are currently 96 active notifications by Lorem ipsum (notified after 2 October 2022) which include the ingredient Lorem ipsum.
+                    There are currently 96 active notifications by Procter &amp; Gamble (submitted after 2 October 2022) which include the ingredient Aorem ipsum.
                 </p>                    
             </div>
         </div>
@@ -761,6 +761,14 @@
         </div>
     </section>
 
+</div>
+
+<div class="govuk-grid-column-full">
+    <div class="govuk-grid-row">
+        <p class="govuk-body govuk-!-font-size-14 govuk-!-margin-top-9 govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
+            <sup>&ast;</sup>Notifications submitted before 3 October 2022 are not searchable for ingredients. <br class="opss-br-desktop">The ingredient may also feature in older notifications.
+        </p>
+    </div>
 </div>
 
 {% endblock %}
