--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -524,7 +524,9 @@ ul.opss-left-nav {
     }
    
 }
-
+.opss-test-text {
+    color: $govuk-text-colour;
+}
 .opss-primary-text {
     color: $govuk-text-colour;
 }
