padding on borders

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -545,6 +545,7 @@ a[class*="link--no-underline"] sup {
 .opss-border-left {border-left-width: 1px; }
 .opss-border-right {border-right-width: 1px; }
 .opss-border-none {border-width: 0; }
+
 @include govuk-media-query($from: tablet) {
     .opss-rounded-corners {border-radius: 5px; }
     .opss-drop-shadow {box-shadow: 3px 4px 6px 0px #ebebeb; }//2px 2px 10px govuk-colour("mid-grey");
@@ -556,6 +557,12 @@ a[class*="link--no-underline"] sup {
         line-height: 1.2 !important; 
     }     
 }
+
+@include govuk-media-query($until: tablet) { 
+    .opss-border-all {
+        padding: govuk-spacing(0) !important; 
+    }
+ }
 
 .opss-details--sm {
     @include govuk-media-query($from: desktop) {
