--- a/app/views/cosmetics-general/tasks/help/inc_products-task5b.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task5b.html
@@ -11,19 +11,23 @@
 
     <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-5 govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-1 govuk-!-padding-left-2 opss-border-all opss-rounded-corners">
     
-        <h2 class="govuk-heading-s govuk-!-font-size-16 opss-primary-text">Complete all tasks</h2>
+        <h2 class="govuk-heading-s govuk-!-font-size-16 opss-primary-text">Start each task</h2>
     
         <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">
-            This draft notification was created by copying a notification and is prepopulated with data. 
+            This draft notification was created by copying a completed notification and is already prepopulated with data. 
         </p>
     
-        <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-bottom-1 opss-secondary-text">
-            Start and complete each task to edit or confirm the data.
+        <p class="govuk-body govuk-!-font-size-16 govuk-!-margin-bottom-1 govuk-!-font-weight-bold opss-primary-text">
+            Start and then complete each task to edit or confirm the data.
         </p>
     
     </div>    
 
-    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You can review the draft and make changes to the draft notification by completing each task as often as required. You must complete each task before you can accept the draft and submit it.
+    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">
+        You can review the draft and make changes to the draft notification by completing each task as often as required. You must complete each task before you can accept the draft and submit it.
     </p>
-    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You will have 7 days from the date you submit the notification to delete it. You should only do this if your notification contains wrong information.</p>
+
+    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">
+        You will have 7 days from the date you submit the notification to delete it. You should only do this if your notification contains wrong information.
+    </p>
 </div>
