--- a/app/views/cosmetics-general/inc_tables-details.html
+++ b/app/views/cosmetics-general/inc_tables-details.html
@@ -2,7 +2,7 @@
         
 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
   <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
-  <li>Confirm if poisonous - especially if the details match ingredients listed in the following poison tables </li>
+  <li>{% include "cosmetics-general/inc_npis-hint.html" %}</li>
 </ul>
 
 {% include "cosmetics-general/inc_tables-details-details.html" %}  
