--- a/app/views/cosmetics-general/ingredient-1b-how-many.html
+++ b/app/views/cosmetics-general/ingredient-1b-how-many.html
@@ -24,7 +24,7 @@
         
       <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
         <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
-        <li>Confirm if poisonous - especially if the details match ingredients listed in the following poison tables </li>
+        <li>{% include "cosmetics-general/inc_npis-hint.html" %}</li>
       </ul>
 
       <a href="#skip-to-form" class="govuk-skip-link opss-skip-link">Skip poisonous ingredients tables.</a>
@@ -85,8 +85,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-1" name="poisonous-1" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-1">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>
@@ -95,8 +96,8 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-1" name="poisonous-1" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-1">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
                   </div>
                 </div>
               </div-->              
@@ -128,8 +129,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-2" name="poisonous-2" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-2">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>              
@@ -161,8 +163,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-3" name="poisonous-3" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-3">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>              
@@ -194,8 +197,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-4" name="poisonous-4" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-2">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>              
@@ -227,8 +231,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-5" name="poisonous-5" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-5">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>              
@@ -260,8 +265,9 @@
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="poisonous-6" name="poisonous-6" type="checkbox" value="checkbox">
                     <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-6">
-                      Is it poisonous?
-                    </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                      </label>
+                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
                   </div>
                 </div>
               </div>              
