--- a/app/views/cosmetics-general/inc_key-ingredients-form.html
+++ b/app/views/cosmetics-general/inc_key-ingredients-form.html
@@ -52,7 +52,7 @@
   </div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
+    <div class="govuk-grid-column-full">
 
       <div class="govuk-form-group">
 
@@ -60,8 +60,9 @@
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="poisonous-1" name="poisonous-1" type="checkbox" value="checkbox">
             <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-1">
-              Is it poisonous?
+              {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
             </label>
+            {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
           </div>
         </div>
 
