--- a/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient-error.html
+++ b/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient-error.html
@@ -68,7 +68,7 @@
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
-                  Is it poisonous?
+                  {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
                 </legend>
 
                 <div class="govuk-radios" data-module="govuk-radios">
