--- a/app/views/cosmetics-general/inc_npis-tables-statement.html
+++ b/app/views/cosmetics-general/inc_npis-tables-statement.html
@@ -1,1 +1,1 @@
-The <abbr>NPIS</abbr> needs to know about these ingredients in the product. <span class="govuk-!-font-weight-bold opss-primary-text">If the ingredient is listed here and the amount meets the weight-by-weight criteria then it is an ingredient of concern</span>.
+The <abbr>NPIS</abbr> needs to know about these ingredients in the product. <span class="govuk-!-font-weight-bold opss-primary-text">If the ingredient is listed here and the amount meets the weight-by-weight (<abbr class="opss-no-wrap">w/w</abbr>) criteria then it is an ingredient of concern</span>.
