--- a/app/views/cosmetics-general/ingredient-NICS-page-redesign.html
+++ b/app/views/cosmetics-general/ingredient-NICS-page-redesign.html
@@ -29,7 +29,7 @@
           </legend>
 
           <div id="checkbox-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-3">
-            There are ingredients of concern which the National Poisons Information Service (<abbr>NPIS</abbr>) needs to know about. If the ingredient is listed in the following tables and the amount meets the weight-by-weight criteria then it is an ingredient of concern. The information you provide will be used to help treat people who might accidentally be affected by them.
+            There are ingredients of concern which the National Poisons Information Service (<abbr>NPIS</abbr>) needs to know about. If the ingredient is listed in the following tables and the amount meets the weight-by-weight (<abbr class="opss-no-wrap">w/w</abbr>) criteria then it is an ingredient of concern. The information you provide will be used to help treat people who might accidentally be affected by them.
 
 
 
