--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -179,6 +179,70 @@
                 </div>
             </dl>
 
+            <dl class="govuk-summary-list opss-summary-list-mixed">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Nanomaterials</dt>
+                    <dd class="govuk-summary-list__value">
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>
+                                Mauris quis accumsan
+                            </li>
+                            <li>
+                                Donec eu faucibus purus
+                            </li>
+                        </ul>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Application instruction</dt>
+                    <dd class="govuk-summary-list__value">Inhalation</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Exposure condition</dt>
+                    <dd class="govuk-summary-list__value">Left on</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Category of product</dt>
+                    <dd class="govuk-summary-list__value">Hair and scalp products</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Category of hair and scalp product</dt>
+                    <dd class="govuk-summary-list__value">Hair colouring products</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Category of hair colouring product</dt>
+                    <dd class="govuk-summary-list__value">Non-oxidative hair colour products</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Formulation given as</dt>
+                    <dd class="govuk-summary-list__value">Frame formulation</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Frame formulation</dt>
+                    <dd class="govuk-summary-list__value">Tonic, Cosmetic Water</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Physical form</dt>
+                    <dd class="govuk-summary-list__value">Spray</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Special applicator</dt>
+                    <dd class="govuk-summary-list__value">No</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Acute poisoning information</dt>
+                    <dd class="govuk-summary-list__value"><!-- ? --></dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Contains ingredients <abbr title="National Poisons Information Service">NPIS</abbr> needs to know about</dt>
+                    <dd class="govuk-summary-list__value">No</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key"><abbr title="Power of hydrogen">pH</abbr> range</dt>
+                    <dd class="govuk-summary-list__value">13.0 to 14.0</dd>
+                </div>
+            </dl>            
+
         </section>
 
         <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
