--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -19,7 +19,7 @@
         <div class="govuk-grid-column-full">  
 
             <!--span class="govuk-caption-l">Add a product to case 2101-0008 </span-->
-            <h1 class="govuk-label-wrapper">
+            <h1 class="govuk-label-wrapper opss-label-wrapper">
                 <label class="govuk-label govuk-label--l" for="add-product">
                     Enter a <abbr>PSD</abbr> product record reference number
                 </label>
