--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -978,8 +978,12 @@ dd dl.opss-nested-definition-list {
             }
         }
 
-        & > dl > div:last-child {
-            border-bottom: none;
+        /*& > dl > div:last-child {
+            border-bottom: none; 
+        }*/
+
+        & dl:last-of-type > div:last-child {
+            border-bottom: none; 
         }
     }
 
