--- a/app/views/psd-revised-flow/is-this-the-product-counterfeit.html
+++ b/app/views/psd-revised-flow/is-this-the-product-counterfeit.html
@@ -21,7 +21,7 @@
         <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
     
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l opss-fieldset__legend">
                     <h1 class="govuk-fieldset__heading">
                         Is this the correct product record to add to your case?
                     </h1>
