--- a/app/views/cosmetics-general/inc_tables-checkbox-label.html
+++ b/app/views/cosmetics-general/inc_tables-checkbox-label.html
@@ -1,1 +1,1 @@
-Is it listed in the <abbr>NPIS</abbr> tables and is it an ingredient of concern?
+Is it listed in the <abbr>NPIS</abbr> tables and does the <abbr>NPIS</abbr> need to know about it?
