--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-products-extended.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-products-extended.html
@@ -44,7 +44,7 @@
       <li>
           <a href="left-nav-cosmetic-products-drafts.html" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
       </li>
-      <li class="govuk-!-margin-bottom-6">
+      <!--li class="govuk-!-margin-bottom-6">
           <a href="#" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
       </li> 
       <li>
@@ -52,7 +52,7 @@
       </li> 
       <li>
         <a href="left-nav-cosmetic-ingredients-search.html" class="govuk-link govuk-link--no-visited-state">Ingredient - search</a>
-      </li>                
+      </li-->                
     </ul>
 
   </nav>
