--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -454,6 +454,10 @@ ul.opss-radio-list {
             border-bottom: none 0; 
         }
 
+        .test {
+            border: none; //remove !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+        }
+
     }
 }
 /*
