cos title change

--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-        Add the ingredient of concern
+        Add an ingredient the <abbr>NPIS</abbr> needs to know about
       </h1>
 
     </div>
