--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -8,13 +8,18 @@
 @import "./opss-pagination";
 
 @include govuk-media-query($from: desktop) {
-/*fix for psd while it is unable to place back links outside and before the main.govuk-main-wrapper element */
-    body > .govuk-width-container > .govuk-main-wrapper > .govuk-back-link {
+
+    /*fix for psd while it is unable to place back links outside and before the main.govuk-main-wrapper element */
+    body>.govuk-width-container>.govuk-main-wrapper>.govuk-back-link {
         margin-top: - govuk-spacing(8);
-        margin-bottom:  - (govuk-spacing(8) + govuk-spacing(1));
+        margin-bottom: - (govuk-spacing(8) + govuk-spacing(1));
         position: relative;
         top: - (govuk-spacing(6) + govuk-spacing(1));
     }
+}
+
+.test {
+    border: 1px solid red;
 }
 
 .opss-radios__divider--title .govuk-radios__divider {
@@ -26,6 +31,7 @@
         margin-top: govuk-spacing(6);
         margin-bottom: govuk-spacing(3);
     }
+
     /*@include govuk-media-query($from: desktop) {
         //margin-left: (govuk-spacing(8) + govuk-spacing(1));
         //font-size: 24px !important; font-size: 1.5rem !important; line-height: 1.25 !important; margin-top: govuk-spacing(7);
@@ -34,7 +40,7 @@
 }
 
 .opss-radios__divider--title {
-    & > .govuk-radios__divider:first-child {
+    &>.govuk-radios__divider:first-child {
         margin-top: govuk-spacing(0);
     }
 }
@@ -45,10 +51,10 @@
         margin-left: 5px;
     }
 
-        display: inline-block;
-        transform: scale(1.2, 1);
-        font-weight: 600;
-        opacity: 0.9;
+    display: inline-block;
+    transform: scale(1.2, 1);
+    font-weight: 600;
+    opacity: 0.9;
 }
 
 .opss-borders {
@@ -102,7 +108,7 @@
         margin-right: govuk-spacing(0);
         margin-bottom: govuk-spacing(6);
 
-        & > span {
+        &>span {
             text-align: center;
             width: 100%;
             margin-bottom: govuk-spacing(4);
@@ -126,19 +132,24 @@
         margin-top: - govuk-spacing(4);
         margin-bottom: govuk-spacing(2);
 
-        dt, dd {
+        dt,
+        dd {
             padding-bottom: 0;
         }
     }
 }
+
 @include govuk-media-query($from: desktop) {
     .opss-panels {
-        display: -webkit-flex; /* Safari */
+        display: -webkit-flex;
+        /* Safari */
         display: flex;
 
         .opss-panels__pair {
-            -webkit-flex: 1 auto; /* Safari */
-            -ms-flex: 1 auto; /* IE10 */
+            -webkit-flex: 1 auto;
+            /* Safari */
+            -ms-flex: 1 auto;
+            /* IE10 */
             flex: 1 auto;
 
             padding-bottom: govuk-spacing(6);
@@ -147,6 +158,7 @@
                 margin-right: govuk-spacing(2);
                 margin-left: govuk-spacing(3);
             }
+
             &.opss-panels__pair--right {
                 margin-right: govuk-spacing(3);
                 margin-left: govuk-spacing(2);
@@ -157,38 +169,41 @@
 }
 
 .opss-grey-record {
-    position: relative; 
-    top: -1px; 
+    position: relative;
+    top: -1px;
 
-    & + .opss-grey-record {
-        top: -2px; 
+    &+.opss-grey-record {
+        top: -2px;
     }
 
     tr:first-child th {
-        border-top: 1px dashed govuk-colour("mid-grey") !important; 
-        background-color: govuk-colour("light-grey") !important; /* #f7f9fa*/
+        border-top: 1px dashed govuk-colour("mid-grey") !important;
+        background-color: govuk-colour("light-grey") !important;
+        /* #f7f9fa*/
 
 
         a {
-            padding-right: govuk-spacing(2); 
-            color: $govuk-focus-text-colour; 
+            padding-right: govuk-spacing(2);
+            color: $govuk-focus-text-colour;
 
             &:hover {
                 color: govuk-colour("dark-grey");
             }
         }
     }
+
     tr:last-child td {
-        border-bottom: 1px dashed govuk-colour("mid-grey") !important; 
-        background-color: govuk-colour("light-grey") !important; 
-     
+        border-bottom: 1px dashed govuk-colour("mid-grey") !important;
+        background-color: govuk-colour("light-grey") !important;
+
     }
 
-    tr th, 
-    tr + tr td:first-of-type {
+    tr th,
+    tr+tr td:first-of-type {
         padding-left: govuk-spacing(2);
     }
-    tr + tr td:last-of-type {
+
+    tr+tr td:last-of-type {
         padding-right: govuk-spacing(2);
     }
 }
@@ -267,6 +282,7 @@ ul.opss-radio-list {
     border-style: solid;
     padding: 2px 5px;
     margin-bottom: govuk-spacing(1);
+
     @include govuk-media-query($from: tablet) {
         margin-bottom: 0;
         /*min-width: 106px; text-align: center; */
@@ -274,12 +290,14 @@ ul.opss-radio-list {
 
     td & {
         margin-left: govuk-spacing(1);
+
         &:last-child {
             margin-bottom: 0;
 
             /*&.opss-tag--risk4 {position: relative; right: 33%; }*/
         }
-            @include govuk-media-query($from: desktop) {
+
+        @include govuk-media-query($from: desktop) {
             &:nth-of-type(n+11) {
                 margin-top: govuk-spacing(1);
             }
@@ -290,15 +308,18 @@ ul.opss-radio-list {
         border-color: govuk-colour("red");
         color: govuk-colour("red");
     }
+
     &.opss-tag--risk2 {
         border-color: govuk-colour("dark-grey");
         color: govuk-colour("dark-grey");
     }
+
     &.opss-tag--risk3 {
         border-color: govuk-colour("black");
         background-color: govuk-colour("black");
         color: govuk-colour("white");
     }
+
     &.opss-tag--risk4 {
         /*border-radius: govuk-spacing(2); border-width: 0.5px; border-color: govuk-colour("red"); padding-left: govuk-spacing(2); padding-right: govuk-spacing(2);*/
 
@@ -313,6 +334,7 @@ ul.opss-radio-list {
         /* &::before {content: '*** '; vertical-align: middle; }
         &::after {content: ' ***'; vertical-align: middle; } */
     }
+
     &.opss-tag--plain {
         @include opss-font-size($s: 14px, $l: 1.3);
         text-transform: none;
@@ -324,12 +346,14 @@ ul.opss-radio-list {
         min-width: 76px;
         text-align: center;
     }
+
     &.opss-tag--covid {
         background-color: govuk-colour("pink");
         border-color: govuk-colour("pink");
         color: govuk-colour("white");
         text-transform: none;
     }
+
     &.opss-tag--std {
         @include opss-font-size($s: 14px, $l: 1.3);
         text-transform: none;
@@ -341,6 +365,7 @@ ul.opss-radio-list {
         min-width: 76px;
         text-align: center;
     }
+
     &.opss-tag--lrg {
         @include opss-font-size($s: 16px, $l: 1.2);
         padding-top: 0;
@@ -350,16 +375,22 @@ ul.opss-radio-list {
 
 .opss-cross-through {
     background:
-        linear-gradient(to top left, rgba(0,0,0,0) 0%, rgba(0,0,0,0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0,0,0,0) calc(50% + 1px), rgba(0,0,0,0) 100%),
-        linear-gradient(to top right, rgba(0,0,0,0) 0%, rgba(0,0,0,0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0,0,0,0) calc(50% + 1px), rgba(0,0,0,0) 100%);
+        linear-gradient(to top left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0, 0, 0, 0) calc(50% + 1px), rgba(0, 0, 0, 0) 100%),
+        linear-gradient(to top right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0, 0, 0, 0) calc(50% + 1px), rgba(0, 0, 0, 0) 100%);
 }
-@media screen and (min-width:0\0) and (min-resolution: +72dpi) {//ie9+ only
-  .opss-cross-through {background: none !important; }
+
+@media screen and (min-width:0\0) and (min-resolution: +72dpi) {
+
+    //ie9+ only
+    .opss-cross-through {
+        background: none !important;
+    }
 }
 
 .opss-form-group {
     @include govuk-media-query($from: desktop) {
         &.opss-form-group--sm-labels {
+
             .govuk-radios--small,
             .govuk-checkboxes--small {
                 label {
@@ -384,9 +415,13 @@ ul.opss-radio-list {
     }
 }
 
-.opss-dl-select {/* non-js select */
-    & dt, & dd {
-        padding: 0; margin: 0;
+.opss-dl-select {
+
+    /* non-js select */
+    & dt,
+    & dd {
+        padding: 0;
+        margin: 0;
     }
 
     border: 2px solid $govuk-input-border-colour;
@@ -413,7 +448,10 @@ ul.opss-radio-list {
             width: 100%;
         }
 
-        a, a:visited, a:active, a:focus {
+        a,
+        a:visited,
+        a:active,
+        a:focus {
             color: $govuk-text-colour;
             text-decoration: none;
         }
@@ -440,22 +478,24 @@ ul.opss-radio-list {
     .opss-tabs {
 
         &.opss-tabs--min-height-s {
-            & > div {
+            &>div {
                 min-height: 254px;
             }
         }
+
         &.opss-tabs--min-height-m {
-            & > div {
+            &>div {
                 min-height: 730px;
             }
         }
 
-        dl > div:last-child {
+        dl>div:last-child {
             border-bottom: none 0;
         }
 
     }
 }
+
 /*
 .opss-list-counter {
     padding-left: govuk-spacing(0);
@@ -479,15 +519,17 @@ ul.opss-radio-list {
 */
 
 .opss-timeline img {
-    max-width: 100%;;
+    max-width: 100%;
+    ;
 }
+
 @include govuk-media-query($from: desktop) {
     .opss-blank-img {
         width: 50%;
     }
 }
 
-.opss-label-wrapper, 
+.opss-label-wrapper,
 .opss-fieldset__legend {
     max-width: none !important;
 }
@@ -496,17 +538,20 @@ section[data-info-number] {
     margin-left: - govuk-spacing(4);
     margin-right: - govuk-spacing(4);
 }
+
 section.opss-border-all[data-info-number] {
     margin-bottom: govuk-spacing(8) !important;
 
-    & > ul li:last-child dl {/* remove border bottom and margin from last row when inside a border box */
+    &>ul li:last-child dl {
+        /* remove border bottom and margin from last row when inside a border box */
         margin-bottom: - govuk-spacing(2);
 
-        div:last-child  {
+        div:last-child {
             border-bottom: none;
         }
     }
 }
+
 section:not(.opss-border-all)[data-info-number="0"] {
     margin-bottom: govuk-spacing(6) !important;
 }
@@ -523,7 +568,8 @@ select:disabled {
     cursor: default;
 }
 
-.opss-accordion--sm-all > div:first-child button {//'Show all sections': right + sm font*/
+.opss-accordion--sm-all>div:first-child button {
+    //'Show all sections': right + sm font*/
     float: right;
     @include opss-font-size($s: 14px, $l: 1.3);
 }
@@ -537,9 +583,20 @@ select:disabled {
         max-height: 400px;
         overflow-y: auto;
 
-        &::-webkit-scrollbar {width: govuk-spacing(2); }
-        &::-webkit-scrollbar-track {background: govuk-colour("light-grey"); }
-        &::-webkit-scrollbar-thumb {background: $govuk-border-colour; }
-        &::-webkit-scrollbar-thumb:hover {background: $govuk-secondary-text-colour; }
+        &::-webkit-scrollbar {
+            width: govuk-spacing(2);
+        }
+
+        &::-webkit-scrollbar-track {
+            background: govuk-colour("light-grey");
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: $govuk-border-colour;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background: $govuk-secondary-text-colour;
+        }
     }
 }
